Enhance README with detailed project features
Expanded project overview and features in README.