@@ -1,119 +1,311 @@
 # Dungeon KUrawler
+
 **COMP 302 – Software Engineering | Koç University – Spring 2026**
 
-A pixel-art dungeon crawler built with Java 21 and JavaFX 21.
+A pixel-art dungeon crawler built with Java 21 and JavaFX 21 featuring map creation, survival gameplay, combat, inventory management, marketplace progression, and persistent player accounts.
 
 ---
 
-## Project Structure
+# Overview
 
+Dungeon KUrawler is a dungeon exploration and survival game inspired by classic dungeon crawler RPGs. Players can design custom maps, fight enemies, collect loot, manage equipment, purchase upgrades, and survive increasingly difficult enemy waves.
+
+The project was developed as part of the COMP 302 Software Engineering course and follows an object-oriented architecture emphasizing extensibility, maintainability, and reusable gameplay systems.
+
+---
+
+# Features
+
+## Authentication & Persistence
+
+* User registration and login system
+* SHA-256 password hashing
+* Persistent local user accounts
+* Persistent player coin balances
+* Persistent marketplace purchases
+* Automatic save directory creation
+* Session restoration support
+
+User data is stored locally at:
+
+```text
+~/.kurawler/users.json
 ```
+
+---
+
+## Core Engine
+
+* Tile-based grid engine
+* Vec2 coordinate system
+* Collision detection
+* Map generation system
+* Game loop architecture
+* Combat system
+* Projectile support
+* Character statistics system
+* Inventory management
+
+---
+
+## Character System
+
+Hero statistics:
+
+* HP (Health)
+* Mana
+* Strength (STR)
+* Defense (DEF)
+* Energy
+
+Features:
+
+* Equipment system
+* Weapon equipping
+* Inventory management
+* Consumable items
+* Stat modification system
+
+---
+
+## Combat System
+
+Implemented mechanics include:
+
+* Melee combat
+* Enemy damage calculation
+* Weapon damage modifiers
+* Defense mitigation
+* Hero death handling
+* Enemy death handling
+* Energy consumption during combat
+* Click-to-attack interactions
+
+Combat follows the specification requirements described in the project document.
+
+---
+
+## Enemy AI
+
+### Knight
+
+* Pathfinding toward player
+* Melee attacks
+* Dynamic stat scaling
+
+### Sorcerer
+
+* Projectile attacks
+* Teleportation behavior
+* Ranged combat
+
+Additional features:
+
+* Enemy spawning
+* Wave scaling
+* Elite enemies
+* Dynamic difficulty progression
+
+---
+
+## Wave Survival Mode
+
+An endless survival mode where:
+
+* Enemies spawn continuously
+* Wave difficulty increases over time
+* Enemy counts scale every wave
+* Spawn intervals become more aggressive
+* Rewards increase as progression continues
+* Game ends only when the hero dies
+
+Wave mode acts similarly to endless-runner progression systems.
+
+---
+
+## Marketplace System
+
+Players earn coins by defeating enemies and surviving waves.
+
+Marketplace features:
+
+* Coin economy
+* Persistent purchases
+* Item ownership tracking
+* Purchase validation
+* Dynamic marketplace UI
+
+Available item categories:
+
+* Weapons
+* Potions
+* Spell Scrolls
+* Keys
+* Rings
+
+---
+
+## Loadout System
+
+The Loadout screen allows players to:
+
+* View owned items
+* Equip weapons
+* Equip accessories
+* Manage consumables
+* Prepare loadouts before entering Wave Mode
+
+Equipped items automatically synchronize with gameplay sessions.
+
+---
+
+## Map Editor
+
+Features:
+
+* Place dungeon objects
+* Create custom maps
+* Save maps
+* Load maps
+* Edit existing layouts
+* Run maps directly from editor
+
+Map data is stored using JSON serialization as required by the project specification.
+
+---
+
+## Visual Systems
+
+* Pixel-art rendering
+* Animated torches
+* Sprite animation system
+* Character animation
+* Marketplace UI
+* Inventory UI
+* Loadout UI
+* Responsive scaling
+
+Utility systems include:
+
+* SpriteRenderer
+* ImageCache
+* HeroAnimator
+* KnightAnimator
+* SorcererAnimator
+
+---
+
+# Project Structure
+
+```text
 DungeonKUrawler/
 ├── pom.xml
-└── src/main/
-    ├── java/
-    │   ├── module-info.java
-    │   └── com/kurawler/
-    │       ├── app/
-    │       │   └── Main.java              ← Entry point
-    │       ├── screens/
-    │       │   ├── ScreenManager.java     ← Navigation controller
-    │       │   ├── BaseScreen.java        ← Abstract base
-    │       │   ├── MainMenuScreen.java    ← Main menu with animated torches
-    │       │   ├── LoginScreen.java       ← Login with tabbed toggle
-    │       │   ├── RegisterScreen.java    ← Hero registration
-    │       │   ├── WelcomeScreen.java     ← Post-login quest briefing
-    │       │   └── HelpScreen.java        ← How-to-play reference
-    │       ├── components/
-    │       │   ├── DungeonButton.java     ← Styled pixel-art button
-    │       │   ├── PixelTextField.java    ← Unified text / password input
-    │       │   ├── TorchAnimation.java    ← Animated flickering torch
-    │       │   └── PixelBorder.java       ← Stone-tile cap bars
-    │       └── model/
-    │           └── UserStore.java         ← SHA-256 hashed user accounts (JSON)
-    └── resources/
-        └── css/
-            └── dungeon.css               ← Full dark dungeon theme
+├── src/main/
+│
+├── java/com/kurawler/
+│   ├── app/
+│   ├── components/
+│   ├── engine/
+│   ├── game/
+│   │   ├── action/
+│   │   ├── effect/
+│   │   ├── entity/
+│   │   └── objects/
+│   ├── model/
+│   ├── screens/
+│   ├── util/
+│   └── wave/
+│
+└── resources/
+    ├── css/
+    └── images/
 ```
 
 ---
 
-## Requirements
+# Build Requirements
 
 | Tool     | Version |
-|----------|---------|
+| -------- | ------- |
 | Java JDK | 21+     |
 | Maven    | 3.8+    |
 
-JavaFX is pulled automatically by Maven from Maven Central - no manual download needed.
-
 ---
 
-## Build & Run
+# Build & Run
 
-### With Maven (recommended)
+## Maven
 
 ```bash
-# Clone / unzip the project, then:
+git clone <repository-url>
+
 cd DungeonKUrawler
 
-# Run directly
 mvn javafx:run
+```
 
-# Build a fat JAR
+## Build JAR
+
+```bash
 mvn package
-java -jar target/dungeon-kurawler-1.0-SNAPSHOT-shaded.jar
-```
 
-### With an IDE (IntelliJ IDEA / Eclipse)
-
-1. Open the project as a **Maven** project.
-2. Let the IDE import dependencies.
-3. Run `com.kurawler.app.Main`.
-
-If your IDE requires explicit VM args for JavaFX (older setups):
-```
---module-path /path/to/javafx-sdk/lib
---add-modules javafx.controls,javafx.fxml,javafx.media
+java -jar target/dungeon-kurawler.jar
 ```
 
 ---
 
-## User Accounts
+# Controls
 
-Accounts are stored in `~/.kurawler/users.json` (your home directory).  
-Passwords are hashed with **SHA-256** — never stored in plain text.
-
-To test:
-1. Launch the game → click **START NEW GAME**
-2. Switch to the **REGISTER** tab
-3. Create a hero name + password
-4. Next launch → use **LOGIN** tab with the same credentials
-
----
-
-## Keyboard Shortcuts
-
-| Key       | Action                        |
-|-----------|-------------------------------|
-| `ENTER`   | Confirm / submit form         |
-| `ESC`     | Back to previous screen       |
-| `H`       | Open Help screen (main menu)  |
-| `I`       | Open Inventory *(Phase 2)*    |
-| `P`       | Pause / Resume *(Phase 2)*    |
+| Key              | Action            |
+| ---------------- | ----------------- |
+| W A S D / Arrows | Move Hero         |
+| Mouse Click      | Interact / Attack |
+| I                | Inventory         |
+| ESC              | Pause Menu        |
+| ENTER            | Confirm           |
+| H                | Help Screen       |
 
 ---
 
-## Phase 1 Scope
+# Technologies
 
-This deliverable covers:
-- ✅ Main menu with animated torches & star background
-- ✅ Login screen (SHA-256 hashed credentials)
-- ✅ Registration screen with validation
-- ✅ Welcome / quest briefing screen
-- ✅ Help screen
-- ✅ Persistent user store (`~/.kurawler/users.json`)
-- ✅ Full CSS dungeon theme (dark stone, gold accents, red highlights)
-- ✅ Keyboard navigation
+* Java 21
+* JavaFX 21
+* Maven
+* JSON Serialization
+* SHA-256 Authentication
+* Object-Oriented Design Patterns
 
-Game engine, level editor and gameplay screens are Phase 2+.
+---
+
+# Current Development Status
+
+## Phase 1
+
+* Authentication System
+* Main Menu
+* Help Screen
+* Welcome Screen
+* User Persistence
+* Dungeon UI Theme
+
+## Phase 2
+
+* Game Engine
+* Combat System
+* Enemy AI
+* Wave Survival Mode
+* Marketplace
+* Loadout System
+* Map Editor
+* Save/Load Infrastructure (in progress)
+* Team Match Mode (planned)
+* Shadow Clone Mechanic (planned)
+
+---
+
+# Team
+
+COMP 302 – Software Engineering
+
+Koç University – Spring 2026
